# gitlite

./: CMakeLists.txt  README.md  main.cpp
include/: Commit.h  Repository.h
src/: Commit.cpp  GitliteException.cpp  Repository.cpp
